--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,11 +16,18 @@
         <label for="y">Second #:</label>
         <input type="number" id="y" name="y" />
 
-        <input type="submit" value="Add" id="add"/>
+        <button id="add">ADD</button>
+        <button type="button" id="subtract">SUBTRACT</button>
+        <button type="button" id="multiply">MULTIPLY</button>
+        <button type="button" id="divide">DIVIDE</button>
+        <!-- <input type="submit" value="Add" id="add"/>
         <input type="submit" value="Subtract" id="subtract"/>
         <input type="submit" value="Multiply" id="multiply"/>
-        <input type="submit" value="Divide" id="divide"/>
+        <input type="submit" value="Divide" id="divide"/> -->
       </form>
+    </div>
+    <div class="results-container">
+      <p>Result is <span id="result"></span></p>
     </div>
   </body>
 </html>
