--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,10 +16,10 @@
         <label for="y">Second #:</label>
         <input type="number" id="y" name="y" />
 
-        <button id="add">ADD</button>
-        <button type="button" id="subtract">SUBTRACT</button>
-        <button type="button" id="multiply">MULTIPLY</button>
-        <button type="button" id="divide">DIVIDE</button>
+        <button type="button" id="add" class="operator">ADD</button>
+        <button type="button" id="subtract" class="operator">SUBTRACT</button>
+        <button type="button" id="multiply" class="operator">MULTIPLY</button>
+        <button type="button" id="divide" class="operator">DIVIDE</button>
         <!-- <input type="submit" value="Add" id="add"/>
         <input type="submit" value="Subtract" id="subtract"/>
         <input type="submit" value="Multiply" id="multiply"/>
@@ -27,7 +27,8 @@
       </form>
     </div>
     <div class="results-container">
-      <p>Result is <span id="result"></span></p>
+      <p>Result: <span id="result"></span></p>
+      <button id="clear">Clear</button>
     </div>
   </body>
 </html>
